# sniffler

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt
include/sniffler/: sniffler.hpp
tests/: sniffler_tests.cpp
